--- a/mail/templates/mail/base.html
+++ b/mail/templates/mail/base.html
@@ -10,6 +10,7 @@
     {% block css %}{% endblock %}
 </head>
 <body>
+    <a href="/enter/logout/">Logout</a>
     {% block mailform %}
     {% endblock %}
 
