delete reg app, all logic in 1 view, ajax reg/auth

--- a/mail/templates/mail/create_mail.html
+++ b/mail/templates/mail/create_mail.html
@@ -52,6 +52,7 @@
                     <div class="col-md-6 right-align">Text:</div>
                     <div class="col-md-6">{{ form.text }}</div>
                 </div>
+                <input name="type" value="mail" hidden>
                 <div class="row">
                         <div class="col-md-12 center-align">
                             <button class="btn-send" id="send_message" type="button">Send</button>
