--- a/mail/templates/mail/base.html
+++ b/mail/templates/mail/base.html
@@ -7,7 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hello!</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
+   
+    <style>
+        .btn-send {
+            width:25%;
+        }
+        .alert{
+            display: none;
+        }
+        .top-button {
+            padding: 10px; 
+            border-bottom: 1px solid #999999;
+        }
+    </style>
     {% block css %}
     {% endblock %}
 
@@ -15,18 +27,20 @@
 <body>
 
     {% if user.is_authenticated %}
-        <a href="/logout/">Logout</a>
+        <div class="top-button">
+            <a href="/logout/">Logout</a>
+        </div>
     {% endif %}
-
-    {% block mailform %}
-    {% endblock %}
-
+    <div class="container">
+        {% block mailform %}
+        {% endblock %}
+    </div>
     <script src="http://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
     crossorigin="anonymous"></script>
 
     {% block javascript %}
     {% endblock %}
-    
+
 </body>
 </html>
