--- a/mail/templates/mail/reg.html
+++ b/mail/templates/mail/reg.html
@@ -1,36 +1,43 @@
 {% extends 'mail/base.html' %}
 
-    {% block mailform %}
-        
-        <div class="container">
-            {% if form1 %}
+
+{% block mailform %}
+    <div class="row">
+        {% if form1 %}
+            <div class="col-md-6">
                 <h1>Signup</h1>
+                <div class="alert alert-success" id="success-message-reg" role="alert">
+                </div>
+                <div class="alert alert-danger" id="error-message-reg" role="alert">
+                </div>
                 <form method="post" data-check-reg-url="/">
                     {% csrf_token %}
                     {{ form1.as_p }}
                     <input name="type" value="reg" hidden>
                     <button type="button" id="reg_b">Signup</button>
                 </form>    
-            {% endif %}
+            </div>
+        {% endif %}
 
-            {% if form1 and form2 %}
-                <br /><hr><br />
-            {% endif %}
-
-            {% if form2 %}
+        {% if form2 %}
+            <div class="col-md-6">
                 <h1>Login</h1>
+                <div class="alert alert-success" id="success-message-auth" role="alert">
+                </div>
+                <div class="alert alert-danger" id="error-message-auth" role="alert">
+                </div>
                 <form method="post" data-check-auth-url="/">
                     {% csrf_token %}
                     {{ form2.as_p }}
                     <input name="type" value="auth" hidden>
                     <button type="button" id="auth_b">Login</button>
                 </form>
-            {% endif %}
-        </div>
-        
-    {% endblock %}
+            </div>
+        {% endif %}
+    </div>
+{% endblock %}
 
-    {% block javascript %}
+{% block javascript %}
     <script>
         $("#auth_b").click(function () {
             let form = $(this).closest("form");
@@ -44,19 +51,37 @@
                 data: form.serialize(),
                 dataType: 'json',
                 success: function(data) {
-                    console.log(data.status);
-                    if(data.status){
-                        $('#success-message').show();
-                        $('#error-message').hide();
+                    if(data['status'] == 1){
+                        $('#success-message-auth').show();
+                        $('#success-message-auth').append("Success - You're in system");
+                        $('#error-message-auth').hide();
+                        setTimeout(function () {
+                            window.location.href = "/";
+                        }, 1000)
                     }
-                    else{
-                        $('#error-message').show();
-                        $('#success-message').hide();
+                    else if (data['status'] == 12) {
+                        $('#error-message-auth').show();
+                        $('#error-message-auth').empty();
+                        $('#error-message-auth').append("First you're need to signup!");
+                        $('#success-message-auth').hide();
+                    }
+                    else {
+                        $('#error-message-auth').show();
+                        $('#error-message-auth').empty();
+                        $('#success-message-auth').hide();
+                        if(data['username'] != ''){
+                            $('#error-message-auth').append(data['username'].concat('<br />'));
+                        }
+                        if(data['password'] != ''){
+                            $('#error-message-auth').append(data['password'].concat('<br />'));
+                        }
                     }
                 },
                 error: function() {
-                    $('#error-message').show();
-                    $('#success-message').hide();
+                    $('#error-message-auth').show();
+                    $('#error-message-auth').empty();
+                    $('#error-message-auth').append('Something is going wrong...');
+                    $('#success-message-auth').hide();
                 }
             })
         });
@@ -72,21 +97,34 @@
                 data: form.serialize(),
                 dataType: 'json',
                 success: function(data) {
-                    console.log(data.status);
-                    if(data.status){
-                        $('#success-message').show();
-                        $('#error-message').hide();
+                    if(data['status'] == 1){
+                        $('#success-message-reg').show();
+                        $('#success-message-reg').append("Success - Now you can to login");
+                        $('#error-message-reg').hide();
                     }
-                    else{
-                        $('#error-message').show();
-                        $('#success-message').hide();
+                    else {
+                        console.log(data);
+                        $('#error-message-reg').show();
+                        $('#error-message-reg').empty();
+                        $('#success-message-reg').hide();
+                        if(data['username'] != ''){
+                            $('#error-message-reg').append(data['username'].concat('<br />'));
+                        }
+                        if(data['password'] != ''){
+                            $('#error-message-reg').append(data['password'].concat('<br />'));
+                        }
+                        else if (data['password_is_wrong'] != '') {
+                            $('#error-message-reg').append(data['password_is_wrong'].concat('<br />'));
+                        }
                     }
                 },
                 error: function() {
-                    $('#error-message').show();
-                    $('#success-message').hide();
+                    $('#error-message-reg').show();
+                    $('#error-message-reg').empty();
+                    $('#error-message-reg').append('Something is going wrong...');
+                    $('#success-message-reg').hide();
                 }
             })
         });
-      </script>
+    </script>
 {% endblock %}
